--- a/sass/settings.sass
+++ b/sass/settings.sass
@@ -36,11 +36,12 @@ img
     text-transform: uppercase
 
 .smallest-title
-    font-family: 'Avenir Heavy', sans-serif
-    font-weight: 900
+    font-family: 'Avenir Bold', sans-serif
+    font-weight: 700
     font-size: 12px
     line-height: 18px
     text-transform: uppercase
+    letter-spacing: .010em
 
 .description
     font-family: 'Avenir Regular', sans-serif
@@ -193,6 +194,105 @@ img
 //DONT DELETE THIS BLOCK
 
 /*custom style form on WEb site - service JOTFORM*/
+//body {
+//    margin : 0 !important;
+//}
+//
+//.form-buttons-wrapper.form-buttons-auto.jsTest-button-wrapperField {
+//    padding : 0 !important;
+//    border : 0;
+//    padding-bottom : 20px !important;
+//}
+//
+//.jotform-form {
+//    padding-left: 3px;
+//        border : 0 !important;
+//}
+//
+//.form-header-group.header-large {
+//    padding-top : 20px !important;
+//    padding-bottom : 0 !important;
+//    border : 0 !important;
+//}
+//
+//.form-label.form-label-top {
+//    color : #FFF !important;
+//}
+//
+//.form-line.jf-required {
+//    color : #FFF !important;
+//    margin-bottom : 0;
+//    margin-top : 0;
+//}
+//
+//.form-all {
+//    border : 0 !important;
+//    background : #FF33B1;
+//}
+//
+//.form-section.page-section {
+//    background : #FF33B1;
+//}
+//
+//#212202837855355 ul.form-section {
+//
+//}
+//
+//.form-subHeader {
+//    color : #FFF !important;
+//    font-weight : bold;
+//}
+//
+//.form-header {
+//    color : #FFF !important;
+//    font-weight : bold;
+//}
+//
+//.form-sub-label {
+//    color : #FFF !important;
+//}
+//
+//.form-submit-button.submit-button.jf-form-buttons.jsTest-submitField {
+//    background : #3E06DE;
+//    border-radius : 50px;
+//}
+//
+//
+//
+//.form-radio-item label {
+//    color : #FFF !important;
+//}
+//
+//.form-required {
+//    display : none;
+//}
+//
+//.form-error-message {
+//
+//}
+//
+//.form-input-wide.jf-required {
+//
+//}
+//
+//.form-textbox {
+//
+//}
+//
+//.form-line-error {
+//    background : #FF33B1;
+//}
+//
+//.form-label.form-label-auto {
+//
+//    display: block;
+//    float: none;
+//    text-align: left;
+//    width: 100%;
+//
+//}
+//
+///*custom style*/
 //
 //.supernova {
 //    background-color: #fff;
@@ -236,7 +336,7 @@ img
 //    border-radius: 0;
 //}
 //.form-section .form-line .form-radio-item {
-//    margin-bottom: 4px;
+//    margin-bottom: 4px!important;
 //}
 //.form-section .form-line .form-radio-item label {
 //    color: #111827!important;
@@ -265,6 +365,7 @@ img
 //    padding: 12px 18px;
 //    letter-spacing: 0.02em;
 //    min-width: initial;
+//    margin-left: 5px;
 //}
 //.page-section .form-line#id_13 {
 //    width: 70%;
@@ -280,3 +381,249 @@ img
 //.page-section .form-line#id_14 .jf-branding {
 //    display: none!important;
 //}
+//
+//@media only screen and (max-width: 575px)  {
+//.form-label.form-label-top {
+//    font-size: 12px;
+//}
+//.form-section .form-line .form-radio-item label {
+//    font-size: 12px;
+//}
+//.page-section .form-line#id_13 {
+//    width: 100%;
+//    margin-bottom: 15px;
+//}
+//.page-section .form-line#id_14 {
+//    width: 100%;
+//    top: -5px;
+//}
+//.form-section .form-line .form-buttons-wrapper .form-submit-button {
+//    width: 100%;
+//    margin-left: 0;
+//}
+//}
+
+
+
+//SETTINGS FOR VENDOR PAGE FORM
+
+//body {
+//    margin : 0 !important;
+//}
+//
+//.form-buttons-wrapper.form-buttons-auto.jsTest-button-wrapperField {
+//    padding : 0 !important;
+//    border : 0;
+//    padding-bottom : 20px !important;
+//}
+//
+//.jotform-form {
+//    padding-left: 3px;
+//        border : 0 !important;
+//}
+//
+//.form-header-group.header-large {
+//    padding-top : 20px !important;
+//    padding-bottom : 0 !important;
+//    border : 0 !important;
+//}
+//
+//.form-label.form-label-top {
+//    color : #FFF !important;
+//}
+//
+//.form-line.jf-required {
+//    color : #FFF !important;
+//    margin-bottom : 0;
+//    margin-top : 0;
+//}
+//
+//.form-all {
+//    border : 0 !important;
+//    background : #FF33B1;
+//}
+//
+//.form-section.page-section {
+//    background : #FF33B1;
+//}
+//
+//#212202837855355 ul.form-section {
+//
+//}
+//
+//.form-subHeader {
+//    color : #FFF !important;
+//    font-weight : bold;
+//}
+//
+//.form-header {
+//    color : #FFF !important;
+//    font-weight : bold;
+//}
+//
+//.form-sub-label {
+//    color : #FFF !important;
+//}
+//
+//.form-submit-button.submit-button.jf-form-buttons.jsTest-submitField {
+//    background : #3E06DE;
+//    border-radius : 50px;
+//}
+//
+//
+//
+//.form-radio-item label {
+//    color : #FFF !important;
+//}
+//
+//.form-required {
+//    display : none;
+//}
+//
+//.form-error-message {
+//
+//}
+//
+//.form-input-wide.jf-required {
+//
+//}
+//
+//.form-textbox {
+//
+//}
+//
+//.form-line-error {
+//    background : #FF33B1;
+//}
+//
+//.form-label.form-label-auto {
+//
+//    display: block;
+//    float: none;
+//    text-align: left;
+//    width: 100%;
+//
+//}
+//
+///*custom style*/
+//
+//.supernova {
+//    background-color: #fff;
+//    border-radius: 8px;
+//}
+//.form-line-error {
+//    background-color: #fff;
+//}
+//.form-section.page-section {
+//    background-color: #fff
+//}
+//.form-label.form-label-top {
+//    color: #111827!important;
+//    font-size: 14px;
+//    margin-bottom: 6px;
+//    margin-left: 0;
+//    margin-right: 0;
+//}
+//.form-buttons-wrapper, .form-submit-clear-wrapper {
+//    justify-content: flex-end;
+//    margin: 0;
+//}
+//
+//.form-section.page-section {
+//    padding: 0;
+//}
+//
+//.form-section .form-line {
+//    margin: 0;
+//}
+//.form-section .form-textbox {
+//    height: 40px;
+//    border-radius: 6px;
+//    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+//    border: 1px solid #CBD5E1;
+//}
+//.form-section .form-textbox[placeholder] {
+//    color: rgba(148, 163, 184, 1);
+//    font-size: 14px !important;
+//    letter-spacing: 0.01em;
+//}
+//.page-section .form-line {
+//    margin-top: 0!important;
+//    padding-top: 0;
+//    padding-left: 0;
+//    padding-right: 0;
+//    padding-bottom: 12px;
+//}
+//.form-section:last-child {
+//    border-radius: 0;
+//}
+//.form-section .form-line .form-radio-item {
+//    margin-bottom: 4px!important;
+//}
+//.form-section .form-line .form-radio-item label {
+//    color: #111827!important;
+//    font-weight: 500;
+//    font-size: 14px;
+//    padding-left: 24px;
+//}
+//.form-section .form-line .form-radio-item label:before {
+//    width: 16px;
+//    height: 16px;
+//    border: 1px solid #CBD5E1;
+//    top: 1px;
+//}
+//.form-section .form-line .form-radio-item label:after {
+//    width: 8px;
+//    height: 8px;
+//    top: 5px;
+//    left: 4px;
+//}
+//.form-section .form-line .form-buttons-wrapper {
+//    padding-bottom: 0!important;
+//}
+//.form-section .form-line .form-buttons-wrapper .form-submit-button {
+//    background-color: rgba(21, 133, 255, 1);
+//    font-size: 14px;
+//    padding: 12px 18px;
+//    letter-spacing: 0.02em;
+//    min-width: initial;
+//    margin-left: 5px;
+//    border-color: rgba(21, 133, 255, 1);
+//}
+//.page-section .form-line#id_13 {
+//    width: 70%;
+//    padding-bottom: 5px;
+//}
+//.page-section .form-line#id_12 {
+//    width: 30%;
+//    height: 100%;
+//    display: flex;
+//    align-self: flex-end;
+//    top: -10px;
+//}
+//.page-section .form-line#id_12 .jf-branding {
+//    display: none!important;
+//}
+//
+//
+//@media only screen and (max-width: 480px)  {
+//.form-label.form-label-top {
+//    font-size: 12px;
+//}
+//.form-section .form-line .form-radio-item label {
+//    font-size: 12px;
+//}
+//.page-section .form-line#id_13 {
+//    width: 100%;
+//    margin-bottom: 15px;
+//}
+//.page-section .form-line#id_12 {
+//    width: 100%;
+//    top: -5px;
+//}
+//.form-section .form-line .form-buttons-wrapper .form-submit-button {
+//    width: 100%;
+//    margin-left: 0;
+//}
+//}
+
